# arkiv-tests

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.standard  EXPLANATION.md  METRICS.md  README.md  RESULTS.md  anvil-chain.json  baseload-workers.json  docker-accounts-private.txt  docker-accounts.txt  docker-compose.yml  explanation.excalidraw  gather-metrics.py  gen-addresses.py  generate-genesis.py  generate-intent-arkiv.py  generate-intent.py  generate-pure-reth-genesis.py  genesis.json  genesis.json.template  init_arkiv.sh  init_geth-l2.sh  init_geth.sh  list-influx-measurements.py  metrics-bridge.py  name-gen.py  notify-test-start.py  package.json  patch-genesis.py  push-results.py  pyproject.toml  query-arkiv.py  query_arkiv.py  rollub.json.template  rollup.json.template  scrape-reth-metrics.py  show-account-values.py  show-mempool.py  (+11 more)
.husky/: pre-commit
blockscout/: docker-compose.yml  geth.yml
docs/: EXPERIMENT.md
grafana/: grafana_backup.json
l2/: build.sh  foundry.toml
prod/: .env.example  01_copy_scripts.sh  02_generate_genesis.sh  Dockerfile  cleanup.sh  docker-compose.yml  generate-env.sh  generate-genesis-entrypoint.sh  generate-pure-reth-genesis.py  (+12 more)
prod-cl/: .env.example  docker-compose.yml  instructions.md
stress-l3/: .gitignore  entity_count_updater.py  json_rpc_user.py  locustfile.py  locustfile_raw_rpc_json.py  metrics.py  pyproject.toml  testnet_balance_checker.py  testnet_topup.py
stress-l3/master/: locust-arkiv.service.template  setup-master-locust.sh
stress-l3/worker/: install-poetry.sh  locust.service.template  setup-locust.sh
(+62 files in other folders)
