[project]
name = "arkiv-tests"
version = "0.2.0"
description = "Stress test for Arkiv L3"
requires-python = ">=3.11"
authors = [
    {name = "Arkiv",email = "arkiv@arkiv.network"}
]
readme = "README.md"
dependencies = [
    "arkiv-sdk==1.0.0b3.dev0",
    "environs>=14.2",
    "locust>=2.43.1",
    "prometheus-client>=0.22.1",
    "testcontainers>=4.12",
    "influxdb-client>=1.50.0",
    "requests>=2.31.0",
    "eth-account>=0.13.7",
    "web3>=7.13.0",
]

[dependency-groups]
dev = ["ruff>=0.14.6"]

[tool.uv]
package = false

[tool.locust]
host = "http://localhost:8545"
users = 5
